force-app/main/default/objects/Agreements__c/Agreements__c.object-meta.xml
<CustomObject>
    <description>Tracking of Diocesan Agreements, Entrustments, and Contracts with clergy, religious, and other diocese.</description>
    <label>Agreement</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>