force-app/main/default/objects/Agreements__c/fields/Assigned_Account__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account that the Religious is being assigned to (most often a parish, school, or ministry) or that is being entrusted to the Religious Congregation for administration.</inlineHelpText>
    <label>Assigned Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreements (Assignment)</relationshipLabel>
    <relationshipName>Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>