force-app/main/default/objects/Agreements__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Date the agreement terminates.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>