force-app/main/default/objects/Agreements__c/fields/Lending_Diocese_Congregation__c.field-meta.xml
<CustomField>
    <fullName>Lending_Diocese_Congregation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Diocese or Religious Congregation that is party to the Agreement, who is lending the respective priest/religious named in the Agreement.</description>
    <inlineHelpText>Diocese or Religious Congregation that is party to the Agreement, who is lending the respective priest/religious named in the Agreement.</inlineHelpText>
    <label>Lending Diocese/Congregation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreements (Lending Diocese/Congregation)</relationshipLabel>
    <relationshipName>Agreements2</relationshipName>
    <type>Lookup</type>
</CustomField>