force-app/main/default/objects/Agreements__c/fields/Partnering_Account__c.field-meta.xml
<CustomField>
    <fullName>Partnering_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Diocese or Religious Congregation that is lending personnel, or is taking administrative responsibility for a local parish.</description>
    <inlineHelpText>Diocese or Religious Congregation that is lending personnel, or is taking administrative responsibility for a local parish.</inlineHelpText>
    <label>Partnering Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>