force-app/main/default/objects/Agreements__c/fields/Sojourning_Clergy_Religious__c.field-meta.xml
<CustomField>
    <fullName>Sojourning_Clergy_Religious__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Clergy or Religious subject in the Agreement, who will be sojourning in the local diocese.</description>
    <inlineHelpText>Clergy or Religious subject in the Agreement, who will be sojourning in the local diocese.</inlineHelpText>
    <label>Sojourning Clergy/Religious</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agreements (Sojourning Clergy/Religious)</relationshipLabel>
    <relationshipName>Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>