force-app/main/default/objects/Agreements__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>Start date that the agreement is valid from.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>