force-app/main/default/objects/Agreements__c/fields/Superior_External__c.field-meta.xml
<CustomField>
    <fullName>Superior_External__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>External Bishop, Vicar, or Religious Superior who is signator on the agreement.</description>
    <inlineHelpText>External Bishop, Vicar, or Religious Superior who is signator on the agreement.</inlineHelpText>
    <label>Superior (External)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>