force-app/main/default/objects/Agreements__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <description>Start date of the Agreement.</description>
    <inlineHelpText>Start date of the Agreement.</inlineHelpText>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>