force-app/main/default/objects/Agreements__c/fields/Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>Valid_Until__c</fullName>
    <description>Date that the Agreement ceases to be valid.</description>
    <inlineHelpText>Date that the Agreement ceases to be valid.</inlineHelpText>
    <label>Valid Until</label>
    <type>Date</type>
</CustomField>