force-app/main/default/objects/Agreements__c/fields/Visiting_Contact__c.field-meta.xml
<CustomField>
    <fullName>Visiting_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Clergyperson or Religious who is the subject of the agreement.</inlineHelpText>
    <label>Visiting Clergy/Religious</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Agreements (Visiting Clergy/Religious)</relationshipLabel>
    <relationshipName>ServiceAgreements</relationshipName>
    <type>Lookup</type>
</CustomField>