force-app/main/default/objects/Agreements__c/recordTypes/Clergy_Agreement.recordType-meta.xml
<RecordType>
    <fullName>Clergy_Agreement</fullName>
    <active>true</active>
    <description>Agreement with international diocese to lend a clergyperson to serve in local diocese.</description>
    <label>Clergy Agreement</label>
</RecordType>