force-app/main/default/objects/Agreements__c/recordTypes/Entrustment.recordType-meta.xml
<RecordType>
    <fullName>Entrustment</fullName>
    <active>true</active>
    <description>Agreement to formally entrust a parish&apos;s administration to a Religious Congregation.</description>
    <label>Entrustment</label>
</RecordType>