force-app/main/default/objects/Agreements__c/recordTypes/Religious_Contract.recordType-meta.xml
<RecordType>
    <fullName>Religious_Contract</fullName>
    <active>true</active>
    <description>Contract with Religious member to serve locally in the diocese.</description>
    <label>Religious Contract</label>
</RecordType>